// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Card 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  min-width: 200px;
  overflow: hidden;
  background: #FFFFFF;
  border: solid 1px #C1C6CC;
  border-radius: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: border 150ms cubic-bezier(0.86,0,0.07,1),box-shadow 150ms cubic-bezier(0.86,0,0.07,1);
  transition: border 150ms cubic-bezier(0.86,0,0.07,1),box-shadow 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0:hover {
  border-color: #C1C6CC;
}

<div
  className="c0"
  display="flex"
  height="100%"
  overflow="hidden"
>
  🥑
</div>
`;

exports[`A raised Card 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  min-width: 200px;
  overflow: hidden;
  background: #FFFFFF;
  border: solid 1px #C1C6CC;
  border-radius: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: border 150ms cubic-bezier(0.86,0,0.07,1),box-shadow 150ms cubic-bezier(0.86,0,0.07,1);
  transition: border 150ms cubic-bezier(0.86,0,0.07,1),box-shadow 150ms cubic-bezier(0.86,0,0.07,1);
  box-shadow: 0px 1px 8px rgba(0,0,0,0.08),0px 1px 1px rgba(0,0,0,0.05);
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:hover {
  box-shadow: 0 2px 12px rgba(0,0,0,0.11),0 1px 4px rgba(0,0,0,0.04);
}

<div
  className="c0"
  display="flex"
  height="100%"
  overflow="hidden"
>
  🥑
</div>
`;

exports[`A raised Card with a CardMedia block 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  min-width: 200px;
  overflow: hidden;
  background: #FFFFFF;
  border: solid 1px #C1C6CC;
  border-radius: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: border 150ms cubic-bezier(0.86,0,0.07,1),box-shadow 150ms cubic-bezier(0.86,0,0.07,1);
  transition: border 150ms cubic-bezier(0.86,0,0.07,1),box-shadow 150ms cubic-bezier(0.86,0,0.07,1);
  box-shadow: 0px 1px 8px rgba(0,0,0,0.08),0px 1px 1px rgba(0,0,0,0.05);
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:hover {
  box-shadow: 0 2px 12px rgba(0,0,0,0.11),0 1px 4px rgba(0,0,0,0.04);
}

.c1 {
  background-size: cover;
  background-repeat: no-repeat;
  background-image: url(http://placekitten.com/200/300);
  overflow: hidden;
  height: 0;
  padding-top: 56%;
}

<div
  className="c0"
  display="flex"
  height="100%"
  overflow="hidden"
>
  <div
    className="c1"
  />
</div>
`;
